--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 			<div class="sub-box">
                 <div class="sub-img">
-                    <img src="image/PHP.png" alt="">
+                    <img src="image/Php.png" alt="">
                     <h3>Python</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, perspiciatis!</p>
                 </div>
@@ -125,7 +125,7 @@
 
 			<div class="sub-box">
                 <div class="sub-img">
-                    <img src="image/JAVA.png" alt="">
+                    <img src="image/Java.png" alt="">
                     <h3>Python</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, perspiciatis!</p>
                 </div>
