--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 		<div class="cta-box">
 			<div class="wrap one">
 				<h3>G-Mail <i class='bx bxl-gmail'></i></h3>
-				<a href="https://gmail.com/rahultimbaliya555@gmail.com" style="color: black;"><p>rahultimbaliya555@gmail.com</p></a>
+				<a href="mailto:rahultimbaliya555@gmail.com" style="color: black;"><p>rahultimbaliya555@gmail.com</p></a>
 				<!-- </p> -->
 			</div>
 
