--- a/index.html
+++ b/index.html
@@ -454,11 +454,18 @@
 	<!--------ends---->
 	<div class="ends">
 		<p style="color: #f75023;">Design And Develop By Rahul Timbaliya © 2023</p>
+		<a href="https://visitcount.itsvg.in">
+			<img style="width: 200px; height: px; margin-left: 10px; margin-top: 20px;" src="https://visitcount.itsvg.in/api?id=Rahultimbaliya14&label=Total%20Views&pretty=false" />
+		  </a>
 	</div>
      
 
 
 	<a id="back" href="#home" class="top"><i id="top" class='bx bxs-chevrons-up'></i></a>
+
+	
+
+
 	<script src="https://unpkg.com/scrollreveal"></script>
 
 	<!--------Link to js---->
