--- a/index.html
+++ b/index.html
@@ -66,43 +66,63 @@
                 <div class="sub-img">
                     <img src="image/Python.png" alt="">
                     <h3>Python</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, perspiciatis!</p>
+                    <p>Recently Learned Created One Project On Python(Django)Some knowledge of numpy</p>
                 </div>
             </div>
 
 			<div class="sub-box">
                 <div class="sub-img">
                     <img src="image/Php.png" alt="">
-                    <h3>Python</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, perspiciatis!</p>
+                    <h3>PHP</h3>
+                    <p>Created One Project Based On PHP core In my academic Purpose!</p>
                 </div>
             </div>
 
 			<div class="sub-box">
                 <div class="sub-img">
                     <img src="image/Java.png" alt="">
-                    <h3>Python</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, perspiciatis!</p>
+                    <h3>Java</h3>
+                    <p>Familiar Java and Its oop concept and some knowledge of spiring,hibernet,android</p>
                 </div>
             </div>
 
 			<div class="sub-box">
                 <div class="sub-img">
-                    <img src="image/Python.png" alt="">
-                    <h3>Python</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, perspiciatis!</p>
+                    <img src="image/ASP.png" alt="">
+                    <h3>ASP .Net</h3>
+                    <p>Create Some small Task For study Purpose</p>
                 </div>
             </div>
 
 			<div class="sub-box">
                 <div class="sub-img">
-                    <img src="image/Python.png" alt="">
-                    <h3>Python</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, perspiciatis!</p>
+                    <img src="image/Csharp.png" alt="">
+                    <h3>C#</h3>
+                    <p>Working with Console Application, WebForm etc</p>
+                </div>
+            </div>
+			<div class="sub-box">
+                <div class="sub-img">
+                    <img src="image/c++.png" alt="">
+                    <h3>C++</h3>
+                    <p>In This Language Familiar with oop concept</p>
+                </div>
+            </div>
+			<div class="sub-box">
+                <div class="sub-img">
+                    <img src="image/c.png" alt="">
+                    <h3>C</h3>
+                    <p>Start My Computer Science Journy With This Language</p>
+                </div>
+            </div>
+			<div class="sub-box">
+                <div class="sub-img">
+                    <img src="image/SQl.png" alt="">
+                    <h3>SQL</h3>
+                    <p>Mostly Used With Database Related Task And My Project Database</p>
                 </div>
             </div>
 			
-
 		</div>
 		<u><h3 style="text-align: center; font-size: 35px; color: var(--main-color);">Tools</h3></u>
 		<div class="items">
