--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<section class="home" id="home">
 		<div class="home-text">
 			<h3 style="margin-top: 30px;">Hello, I'm</h3>
-			<h1>Rahul Timbaliya</h1>
+			<h1>Rahul kESHVALA</h1>
 			<h5>Web Developer<span> Full-Stack Developer</span></h5>
 			<p>I Am Web-Developer In Many Technology <br> and dedicated to my work.</p>
 			<div class="social">
@@ -97,7 +97,7 @@
 			<div class="sub-box">
                 <div class="sub-img">
                     <img src="image/Csharp.png" alt="">
-                    <h3>C#</h3>
+                    <h3>C</h3>
                     <p>Working with Console Application, WebForm etc</p>
                 </div>
             </div>
