--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<section class="home" id="home">
 		<div class="home-text">
 			<h3 style="margin-top: 30px;">Hello, I'm</h3>
-			<h1>Rahul kESHVALA</h1>
+			<h1>Rahul Timbaliya</h1>
 			<h5>Web Developer<span> Full-Stack Developer</span></h5>
 			<p>I Am Web-Developer In Many Technology <br> and dedicated to my work.</p>
 			<div class="social">
