--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Rahul Timbaliya</title>
+	<link rel="shortcut icon" href="image/logo2.png" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<link rel="stylesheet"
@@ -17,7 +18,7 @@
 <body>
 	<!--------header---->
 	<header>
-		<a href="#" class="logo"><img src="image/pngwing.com.png"></a>
+		<a href="#" class="logo"><img src="image/logo2.png"></a>
 		<div class="bx bx-menu" id="menu-icon"></div>
 
 		<ul class="navlist">
@@ -163,7 +164,13 @@
                 <div class="sub-img">
                     <img src="image/mysql.png" alt="">
                     <h3>MySql</h3>
-                    
+                </div>
+            </div>
+
+			<div class="sub-box">
+                <div class="sub-img">
+                    <img src="image/sqlserver.png" alt="">
+                    <h3>Sql Server</h3>
                 </div>
             </div>
 			
@@ -472,6 +479,10 @@
 
 
 	<!--------ends---->
+	<div style="display: flex; justify-content: center; align-items: center;">
+	<a href="#" class="logo"><img src="image/swatch.png" width="5000px " height="auto" style="margin-right: 10px;"></a>
+	<a href="#" class="logo"><img src="image/saveeart.png" width=" " height="10px"></a>
+    </div>
 	<div class="ends">
 		<p style="color: #f75023;">Design And Develop By Rahul Timbaliya © 2023</p>
 		<a href="https://visitcount.itsvg.in">
