--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<h3 style="margin-top: 30px;">Hello, I'm</h3>
 			<h1>Rahul Timbaliya</h1>
 			<h5>Web Developer<span> Full-Stack Developer</span></h5>
-			<p>I Am Web-Developer In Many Technology <br> and dedicated to my work.</p>
+			<p>Working As Software Engineer Trainee <br> At AnsiByteCode LLP</p>
 			<div class="social">
 				<a href="https://www.facebook.com/rahul.timbaliya/"><i class='bx bxl-facebook-circle'></i></a>
 
@@ -63,6 +63,14 @@
 		<u><h3 style="text-align: center; font-size: 35px; color: var(--main-color);">Lanuguages</h3></u>
 		<div class="items">
 			
+			<div class="sub-box">
+                <div class="sub-img">
+                    <img src="image/angular.png" alt="">
+                    <h3>Angular</h3>
+                    <p>Currently Working This Technology</p>
+                </div>
+            </div>
+
 			<div class="sub-box">
                 <div class="sub-img">
                     <img src="image/Python.png" alt="">
@@ -91,7 +99,7 @@
                 <div class="sub-img">
                     <img src="image/ASP.png" alt="">
                     <h3>ASP .Net</h3>
-                    <p>Create Some small Task For study Purpose</p>
+                    <p>Currently Working On This Technology</p>
                 </div>
             </div>
 
