--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<h3 style="margin-top: 30px;">Hello, I'm</h3>
 			<h1>Rahul Timbaliya</h1>
 			<h5>Web Developer<span> Full-Stack Developer</span></h5>
-			<p>Working As Software Engineer Trainee <br> At AnsiByteCode LLP</p>
+			<p>Working As Software Engineer Trainee <br> At AnsiByteCode LLP <img src="./image/Logo-abc.png" id="abc-up" alt="" width="30px" height="20px"></p>
 			<div class="social">
 				<a href="https://www.facebook.com/rahul.timbaliya/"><i class='bx bxl-facebook-circle'></i></a>
 
@@ -195,8 +195,9 @@
 		</div>  
       <h3>I'm a Computer Science Student </h3>
       <h2>Hi My Name Is Rahul Timbaliya </h2>
-      <p>Graduate In BCA And Seekking Job In It Field</p>
-      <h3><i class='bx bxs-map'></i></i> Rajkot,Gujarat</h3>
+      <p>Software Engineer At AnsiByteCode LLP</p>
+	  <img src="./image/Logo-abc.png" id="abc" alt="" width="60px" height="40px">
+      <h3><i class='bx bxs-map'></i></i> Ahmedabad,Gujarat</h3>
       
       
       <br>
