--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<h3 style="margin-top: 30px;">Hello, I'm</h3>
 			<h1>Rahul Timbaliya</h1>
 			<h5>Web Developer<span> Full-Stack Developer</span></h5>
-			<p>Working As Software Engineer Trainee <br> At AnsiByteCode LLP <img src="./image/Logo-abc.png" id="abc-up" alt="" width="30px" height="20px"></p>
+			<p>Working As Software Engineer <br> At AnsiByteCode LLP <img src="./image/Logo-abc.png" id="abc-up" alt="" width="30px" height="20px"></p>
 			<div class="social">
 				<a href="https://www.facebook.com/rahul.timbaliya/"><i class='bx bxl-facebook-circle'></i></a>
 
