--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 					<a href="https://www.linkedin.com/in/rahul-timbaliya"><i class='bx bxl-linkedin-square'></i></a>
 
 					<a id="github" href="https://github.com/Rahultimbaliya14"><i class='bx bxl-github'></i></box-icon></a>
+					
+					<a href="https://stackoverflow.com/users/21492105/rahul-timbaliya"><i class='bx bxl-stack-overflow'></i></a>
 
 					<a href="https://bit.ly/Rahultimbaliyagooglecloud"><i class='bx bxl-google-cloud'></i></a>
 
