Added Blank into the all the link

--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
 				<h5>Web Developer<span> Full-Stack Developer</span></h5>
 				<p>Working As Software Engineer <br> At AnsiByteCode LLP <img src="./image/Logo-abc.png" id="abc-up" alt="" width="30px" height="20px"></p>
 				<div class="social">
-					<a href="https://www.facebook.com/rahul.timbaliya/"><i class='bx bxl-facebook-circle'></i></a>
+					<a href="https://www.facebook.com/rahul.timbaliya/" target="_blank"><i class='bx bxl-facebook-circle'></i></a>
 
-					<a href="https://www.linkedin.com/in/rahul-timbaliya"><i class='bx bxl-linkedin-square'></i></a>
+					<a href="https://www.linkedin.com/in/rahul-timbaliya" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
 
-					<a id="github" href="https://github.com/Rahultimbaliya14"><i class='bx bxl-github'></i></box-icon></a>
-					
-					<a href="https://stackoverflow.com/users/21492105/rahul-timbaliya"><i class='bx bxl-stack-overflow'></i></a>
+					<a id="github" href="https://github.com/Rahultimbaliya14" target="_blank"><i class='bx bxl-github'></i></box-icon></a>
 
-					<a href="https://bit.ly/Rahultimbaliyagooglecloud"><i class='bx bxl-google-cloud'></i></a>
+					<a href="https://stackoverflow.com/users/21492105/rahul-timbaliya" target="_blank"><i class='bx bxl-stack-overflow'></i></a>
 
-					<a href="https://www.instagram.com/rahultimbaliya/"><i class='bx bxl-instagram'></i></a>
+					<a href="https://bit.ly/Rahultimbaliyagooglecloud" target="_blank"><i class='bx bxl-google-cloud'></i></a>
+
+					<a href="https://www.instagram.com/rahultimbaliya/" target="_blank"><i class='bx bxl-instagram'></i></a>
 				</div>
 				<a href="#about" class="btn">About Me</a>
 			</div>
@@ -240,7 +240,7 @@
 					<div class="layer">
 						<h3>Fundamentals Of Degital Marketing
 							<br>
-							<span class="link"><a href="https://drive.google.com/file/d/1JCfp_tei2L3EScjZnFIfYBeI1TGfKugr/view?usp=sharing"><i class='bx bx-link'></i></box-icon></a></span>
+							<span class="link"><a href="https://drive.google.com/file/d/1JCfp_tei2L3EScjZnFIfYBeI1TGfKugr/view?usp=sharing" target="_blank"><i class='bx bx-link'></i></box-icon></a></span>
 						</h3>
 						<h5></h5>
 					</div>
@@ -251,7 +251,7 @@
 					<div class="layer">
 						<h3>Hackerrank Python(Basic)
 							<br>
-							<span class="link"><a href="https://www.hackerrank.com/certificates/34a93d293a45"><i class='bx bx-link'></i></box-icon></a></span>
+							<span class="link"><a href="https://www.hackerrank.com/certificates/34a93d293a45" target="_blank"><i class='bx bx-link'></i></box-icon></a></span>
 						</h3>
 						<h5></h5>
 					</div>
@@ -262,7 +262,7 @@
 					<div class="layer">
 						<h3>Sololearn PHP-Certificate
 							<br>
-							<span class="link"><a href="https://api2.sololearn.com/v2/certificates/CT-JGS6DVMY/image/png"><i class='bx bx-link'></i></box-icon></a></span>
+							<span class="link"><a href="https://api2.sololearn.com/v2/certificates/CT-JGS6DVMY/image/png" target="_blank"><i class='bx bx-link'></i></box-icon></a></span>
 						</h3>
 						<h5></h5>
 					</div>
@@ -273,7 +273,7 @@
 					<div class="layer">
 						<h3>Cyber-Security Certificate MEIT
 							<br>
-							<span class="link"><a href="https://infosecawareness.in/validate-certificate?certid=MeitY/ISEA/WCHP/021059"><i class='bx bx-link'></i></box-icon></a></span>
+							<span class="link"><a href="https://infosecawareness.in/validate-certificate?certid=MeitY/ISEA/WCHP/021059" target="_blank"><i class='bx bx-link'></i></box-icon></a></span>
 						</h3>
 						<h5></h5>
 					</div>
@@ -285,7 +285,7 @@
 						<h3>Software Engineering Virtual Experience
 							Program
 							<br>
-							<span class="link"><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Hewlett%20Packard%20Enterprise%20/da2T3WZCbMAJD7bNB_Hewlett%20Packard%20Enterprise_biQYh8jxMkcDCSCM8_1667323251393_completion_certificate.pdf"><i class='bx bx-link'></i></box-icon></a></span>
+							<span class="link"><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Hewlett%20Packard%20Enterprise%20/da2T3WZCbMAJD7bNB_Hewlett%20Packard%20Enterprise_biQYh8jxMkcDCSCM8_1667323251393_completion_certificate.pdf" target="_blank"><i class='bx bx-link'></i></box-icon></a></span>
 						</h3>
 						<h5></h5>
 					</div>
@@ -296,7 +296,7 @@
 					<div class="layer">
 						<h3>TCS MasterCraft DataPlus
 							<br>
-							<span class="link"><a href="https://g05.tcsion.com/per/g05/pub/31374/LX/batch-participants-report/31374/146490/Rahul_Timbaliya_4387.pdf"><i class='bx bx-link'></i></box-icon></a></span>
+							<span class="link"><a href="https://g05.tcsion.com/per/g05/pub/31374/LX/batch-participants-report/31374/146490/Rahul_Timbaliya_4387.pdf" target="_blank"><i class='bx bx-link'></i></box-icon></a></span>
 						</h3>
 						<h5></h5>
 					</div>
@@ -307,7 +307,7 @@
 					<div class="layer">
 						<h3>Demystifying the Buzzwords in AI_ML Webinar 	
 							<br>
-							<span class="link"><a href="Educational/pdf/Dr.Subhash Demystifying the Buzzwords in AI_ML Webinar Certificate.pdf" download="Demystifying the Buzzwords in AI_ML Webinar"><i class='bx bx-link'></i></box-icon></a></span>
+							<span class="link"><a href="Educational/pdf/Dr.Subhash Demystifying the Buzzwords in AI_ML Webinar Certificate.pdf" download="Demystifying the Buzzwords in AI_ML Webinar" target="_blank"><i class='bx bx-link'></i></box-icon></a></span>
 						</h3>
 						<h5></h5>
 					</div>
@@ -318,7 +318,7 @@
 					<div class="layer">
 						<h3>Python for Data Science Webinar  	
 							<br>
-							<span class="link"><a href="Educational/pdf/Dr.Subhash Python for Data Science Webinar Certificate.pdf" download="Python for Data Science Webinar"><i class='bx bx-link'></i></box-icon></a></span>
+							<span class="link"><a href="Educational/pdf/Dr.Subhash Python for Data Science Webinar Certificate.pdf" download="Python for Data Science Webinar" target="_blank"><i class='bx bx-link'></i></box-icon></a></span>
 						</h3>
 						<h5></h5>
 					</div>
@@ -329,7 +329,7 @@
 					<div class="layer">
 						<h3>G3Q Certificate	
 							<br>
-							<span class="link"><a href="Educational/pdf/G3Q Certificate.pdf" download="G3Q Certificate"><i class='bx bx-link'></i></box-icon></a></span>
+							<span class="link"><a href="Educational/pdf/G3Q Certificate.pdf" download="G3Q Certificate" target="_blank"><i class='bx bx-link'></i></box-icon></a></span>
 						</h3>
 						<h5></h5>
 					</div>
@@ -340,7 +340,7 @@
 					<div class="layer">
 						<h3>ENERGY LITERACY TRAINING
 							<br>
-							<span class="link"><a href="Educational/pdf/ENERGY LITERACY TRAINING.pdf" download="ENERGY LITERACY TRAINING"><i class='bx bx-link'></i></box-icon></a></span>
+							<span class="link"><a href="Educational/pdf/ENERGY LITERACY TRAINING.pdf" download="ENERGY LITERACY TRAINING" target="_blank"><i class='bx bx-link'></i></box-icon></a></span>
 						</h3>
 						<h5></h5>
 					</div>
@@ -374,7 +374,7 @@
 					(For More Please Visit On Github)
 					<br>
 					<br>
-					<a href="https://github.com/Rahultimbaliya14/BCA-SEM6_project" class="projectlink"><i class='bx bxl-github'></i></box-icon></a>
+					<a href="https://github.com/Rahultimbaliya14/BCA-SEM6_project" class="projectlink" target="_blank"><i class='bx bxl-github'></i></box-icon></a>
 				</p>
 			</div>
 
@@ -394,7 +394,7 @@
 						(For More Please Visit On Github)
 						<br>
 						<br>
-						<a href="https://github.com/Rahultimbaliya14/Project_BCA_5" class="projectlink"><i class='bx bxl-github'></i></box-icon></a>
+						<a href="https://github.com/Rahultimbaliya14/Project_BCA_5" class="projectlink" target="_blank"><i class='bx bxl-github'></i></box-icon></a>
 					</p>
 				</div>
 
@@ -414,8 +414,8 @@
 						(For More Please Visit On Github)
 						<br>
 						<br>
-						<a href="https://github.com/Rahultimbaliya14/Date-Finder" class="projectlink"><i class='bx bxl-github'></i></box-icon></a>
-						<a href="https://rahultimbaliya14.github.io/Date-Finder/" class="projectlink"><i class='bx bx-link'></i></box-icon></a>
+						<a href="https://github.com/Rahultimbaliya14/Date-Finder" class="projectlink" target="_blank"><i class='bx bxl-github'></i></box-icon></a>
+						<a href="https://rahultimbaliya14.github.io/Date-Finder/" class="projectlink" target="_blank"><i class='bx bx-link'></i></box-icon></a>
 					</p>
 				</div>
 
@@ -434,8 +434,8 @@
 						(For More Please Visit On Github)
 						<br>
 						<br>
-						<a href="https://github.com/Rahultimbaliya14/Analog-Clock" class="projectlink"><i class='bx bxl-github'></i></box-icon></a>
-						<a href="https://rahultimbaliya14.github.io/Analog-Clock" class="projectlink"><i class='bx bx-link'></i></box-icon></a>
+						<a href="https://github.com/Rahultimbaliya14/Analog-Clock" class="projectlink" target="_blank"><i class='bx bxl-github'></i></box-icon></a>
+						<a href="https://rahultimbaliya14.github.io/Analog-Clock" class="projectlink" target="_blank"><i class='bx bx-link'></i></box-icon></a>
 					</p>
 				</div>
 
@@ -453,8 +453,8 @@
 						(For More Please Visit On Github)
 						<br>
 						<br>
-						<a href="https://github.com/Rahultimbaliya14/Img_d_p" class="projectlink"><i class='bx bxl-github'></i></box-icon></a>
-						<a href="https://rahultimbaliya14.github.io/Img_d_p" class="projectlink"><i class='bx bx-link'></i></box-icon></a>
+						<a href="https://github.com/Rahultimbaliya14/Img_d_p" class="projectlink" target="_blank"><i class='bx bxl-github'></i></box-icon></a>
+						<a href="https://rahultimbaliya14.github.io/Img_d_p" class="projectlink" target="_blank"><i class='bx bx-link'></i></box-icon></a>
 					</p>
 				</div>
 
@@ -479,7 +479,7 @@
 
 				<div class="wrap two">
 					<h3>Watsapp  <i class='bx bxl-whatsapp'></i></h3>
-					<a href="https://wa.me/+916353647592?text=Hi Buatiful Portfolio" style="color: black;"><p>+916353647592</p></a>
+					<a href="https://wa.me/+916353647592?text=Hi Buatiful Portfolio" style="color: black; target="_blank""><p>+916353647592</p></a>
 				</div>
 
 				<div class="wrap three">
