01/Aug/2025 UI Updation

--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
 		
 		<div class="about-content">
 			<div class="about-intro">
-				<h3><i class='bx bxs-user-detail'></i> I'm a Computer Science Student</h3>
-				<h2>Hi, My Name Is Rahul Timbaliya</h2>
-				<p><i class='bx bxs-briefcase'></i> Software Engineer at AnsiByteCode LLP <img src="./image/Logo-abc.png" alt="AnsiByteCode" width="60" height="40"></p>
+				<h3><i class='bx bxs-user-detail'></i> Passionate Full-Stack Developer</h3>
+				<h2>Turning Ideas Into Digital Reality</h2>
+				<p><i class='bx bxs-briefcase'></i> Currently working as Software Engineer at AnsiByteCode LLP, crafting innovative web solutions with cutting-edge technologies <img src="./image/Logo-abc.png" alt="AnsiByteCode" width="60" height="40"></p>
 				<div class="location">
 					<i class='bx bxs-map'></i>
 					<span>Ahmedabad, Gujarat</span>
@@ -233,6 +233,13 @@
 			<div class="education-section">
 				<h1><i class='bx bx-book-reader'></i> Educational Background</h1>
 				
+				<div class="education-item">
+					<h3><i class='bx bxs-star'></i> Master of Computer Applications (2023-Current)</h3>
+					<p><i class='bx bxs-square-rounded'></i> Studying at Indira Gandhi National Open University</p>
+					<p><i class='bx bxs-square-rounded'></i> Currently pursuing MCA degree</p>
+					<div class="result">In Progress</div>
+				</div>
+
 				<div class="education-item">
 					<h3><i class='bx bxs-star'></i> Bachelor of Computer Applications (2020-2023)</h3>
 					<p><i class='bx bxs-square-rounded'></i> Studied at Dr. Subhash Technical Campus, Junagadh</p>
@@ -270,6 +277,32 @@
 		</div>
 
 		<div class="portfolio-content">
+			<div class="col">
+				<img src="Educational/az204.png" alt="Microsoft Certified: Azure Developer Associate">
+				<div class="cert-divider"></div>
+				<div class="layer">
+					<h3>Microsoft Certified: Azure Developer Associate</h3>
+					<span class="link">
+						<a href="https://learn.microsoft.com/api/credentials/share/en-gb/RahulTimbaliya-6658/7DA97B6EF938D6B0?sharingId=4BDF7C8F4DFEA30A" target="_blank" aria-label="View Certificate">
+							<i class='bx bx-link'></i>
+						</a>
+					</span>
+				</div>
+			</div>
+
+			<div class="col">
+				<img src="Educational/az104.png" alt="Microsoft Certified: Azure Administrator Associate">
+				<div class="cert-divider"></div>
+				<div class="layer">
+					<h3>Microsoft Certified: Azure Administrator Associate</h3>
+					<span class="link">
+						<a href="https://learn.microsoft.com/api/credentials/share/en-gb/RahulTimbaliya-6658/E66C425CF395A419?sharingId=4BDF7C8F4DFEA30A" target="_blank" aria-label="View Certificate">
+							<i class='bx bx-link'></i>
+						</a>
+					</span>
+				</div>
+			</div>
+
 			<div class="col">
 				<img src="Educational/FundamentalOfDegitalMarketing.png" alt="Digital Marketing Certificate">
 				<div class="cert-divider"></div>
@@ -519,8 +552,15 @@
 
 	<!-- Back to Top -->
 	<a href="#home" class="top">
-		<i class='bx bxs-chevrons-up'></i>
+		<span class="arrow-up">↑</span>
 	</a>
+	<script>
+		// Example: Generate a list of numbers from 1 to 100 and log them
+		for (let i = 1; i <= 100; i++) {
+			console.log("Number: " + i);
+		}
+	</script>
+
 
 	<script src="https://unpkg.com/scrollreveal"></script>
 	<script type="text/javascript" src="js/script.js"></script>
