Update the animation

--- a/index.html
+++ b/index.html
@@ -60,11 +60,6 @@
 					allowfullscreen
 					loading="lazy"
 				></iframe>
-				<div class="iframe-overlay">
-					<span class="iframe-label">
-						<i class='bx bx-code-alt'></i> Live Demo
-					</span>
-				</div>
 			</div>
 		</div>
 	</section>
@@ -220,13 +215,37 @@
 		</div>
 		
 		<div class="about-content">
-			<div class="about-intro">
-				<h3><i class='bx bxs-user-detail'></i> Passionate Full-Stack Developer</h3>
-				<h2>Turning Ideas Into Digital Reality</h2>
-				<p><i class='bx bxs-briefcase'></i> Currently working as Software Engineer at AnsiByteCode LLP, crafting innovative web solutions with cutting-edge technologies <img src="./image/Logo-abc.png" alt="AnsiByteCode" width="60" height="40"></p>
-				<div class="location">
-					<i class='bx bxs-map'></i>
-					<span>Ahmedabad, Gujarat</span>
+			<div class="experience-section">
+				<h1><i class='bx bx-briefcase'></i> Professional Experience</h1>
+				
+				<div class="experience-item">
+					<h3><i class='bx bxs-star'></i> Software Engineer</h3>
+					<div class="exp-details">
+						<div class="exp-info">
+							<i class='bx bxs-map'></i>
+							<span>AnsiByteCode LLP, Ahmedabad</span>
+						</div>
+						<div class="exp-info">
+							<i class='bx bxs-calendar'></i>
+							<span>Dec 2023 - Present</span>
+						</div>
+					</div>
+					<div class="result">Current Position</div>
+				</div>
+
+				<div class="experience-item">
+					<h3><i class='bx bxs-star'></i> Software Engineer Trainee</h3>
+					<div class="exp-details">
+						<div class="exp-info">
+							<i class='bx bxs-map'></i>
+							<span>AnsiByteCode LLP, Ahmedabad</span>
+						</div>
+						<div class="exp-info">
+							<i class='bx bxs-calendar'></i>
+							<span>May 2023 - Dec 2023</span>
+						</div>
+					</div>
+					<div class="result">Completed</div>
 				</div>
 			</div>
 			
@@ -264,6 +283,8 @@
 					<div class="result">Percentage: 59%</div>
 				</div>
 			</div>
+
+
 		</div>
 		
 		<a href="#con" class="contactme">Contact Me</a>
@@ -278,6 +299,7 @@
 
 		<div class="portfolio-content">
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/az204.png" alt="Microsoft Certified: Azure Developer Associate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -291,6 +313,7 @@
 			</div>
 
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/az104.png" alt="Microsoft Certified: Azure Administrator Associate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -304,6 +327,7 @@
 			</div>
 
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/FundamentalOfDegitalMarketing.png" alt="Digital Marketing Certificate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -317,6 +341,7 @@
 			</div>
 
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/Hackerrank Python Basic.png" alt="Python Basic Certificate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -330,6 +355,7 @@
 			</div>
 
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/Sololearn PHP-Certificate.png" alt="PHP Certificate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -343,6 +369,7 @@
 			</div>
 
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/Cyber-Security Certificate MEIT.png" alt="Cyber Security Certificate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -356,6 +383,7 @@
 			</div>
 
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/Hewlett Packard Enterprise completion certificate.png" alt="HP Enterprise Certificate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -369,6 +397,7 @@
 			</div>
 
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/Master-Craft Certificate TCS.png" alt="TCS Certificate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -382,6 +411,7 @@
 			</div>
 
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/Dr.Subhash Demystifying the Buzzwords in AI_ML Webinar Certificate.png" alt="AI ML Webinar Certificate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -395,6 +425,7 @@
 			</div>
 
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/Dr.Subhash Python for Data Science Webinar Certificate.png" alt="Python Data Science Certificate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -408,6 +439,7 @@
 			</div>
 
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/G3Q Certificate.png" alt="G3Q Certificate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -421,6 +453,7 @@
 			</div>
 
 			<div class="col">
+				<div class="pin"></div>
 				<img src="Educational/ENERGY LITERACY TRAINING.png" alt="Energy Literacy Certificate">
 				<div class="cert-divider"></div>
 				<div class="layer">
@@ -545,24 +578,97 @@
 	<!-- Footer -->
 	<div class="ends">
 		<p>Designed and Developed by Rahul Timbaliya © 2023</p>
-		<a href="https://visitcount.itsvg.in">
-			<img src="https://visitcount.itsvg.in/api?id=Rahultimbaliya14&label=Total%20Views&pretty=false" alt="Visit Counter" />
-		</a>
 	</div>
 
 	<!-- Back to Top -->
 	<a href="#home" class="top">
 		<span class="arrow-up">↑</span>
 	</a>
-	<script>
-		// Example: Generate a list of numbers from 1 to 100 and log them
-		for (let i = 1; i <= 100; i++) {
-			console.log("Number: " + i);
-		}
-	</script>
 
 
 	<script src="https://unpkg.com/scrollreveal"></script>
 	<script type="text/javascript" src="js/script.js"></script>
+	<script>
+window.addEventListener('scroll', function() {
+	const topBtn = document.querySelector('.top');
+	if (window.scrollY < 50) {
+		topBtn.classList.add('hide');
+	} else {
+		topBtn.classList.remove('hide');
+	}
+});
+</script>
+<script>
+// Pinch out and dump: animate the original image to the card bottom, then restore on click
+document.querySelectorAll('.sub-img img, .sub-img svg').forEach(function(img) {
+	let isDumped = false;
+	const parent = img.parentElement;
+	// Ensure parent is positioned for absolute animation
+	if (getComputedStyle(parent).position === 'static') {
+		parent.style.position = 'relative';
+	}
+	img.style.transition = 'transform 0.8s cubic-bezier(.68,-0.55,.27,1.55), opacity 0.8s';
+	img.style.cursor = 'pointer';
+	img.style.position = 'relative';
+	img.addEventListener('click', function(e) {
+		const h = img.offsetHeight;
+		const parentH = parent.offsetHeight;
+		const y = parentH - h - img.offsetTop - 8; // 8px padding from bottom
+		if (!isDumped) {
+			img.style.zIndex = 10;
+			img.style.transform = `scale(0.5) translateY(${y}px)`;
+			img.style.opacity = '0.7';
+			isDumped = true;
+		} else {
+			img.style.transform = '';
+			img.style.opacity = '1';
+			img.style.zIndex = '';
+			isDumped = false;
+		}
+	});
+});
+</script>
+<script>
+// Shuffle animation for about section cards (like playing cards)
+function shuffleCardsAnimation() {
+	const expCards = document.querySelectorAll('.experience-section .experience-item');
+	const eduCards = document.querySelectorAll('.education-section .education-item');
+	const allCards = [...expCards, ...eduCards];
+	const aboutSection = document.querySelector('.about');
+
+	if (!aboutSection || allCards.length === 0) return;
+
+	// Initial shuffle: random rotation and offset
+	allCards.forEach((card, i) => {
+		card.style.transition = 'transform 0.7s cubic-bezier(.68,-0.55,.27,1.55), box-shadow 0.7s';
+		card.style.transform = `translateY(-120px) rotate(${Math.random() * 30 - 15}deg) scale(0.85)`;
+		card.style.opacity = '0.5';
+		card.style.zIndex = 1;
+	});
+
+	// Animate to arranged position after short delay
+	setTimeout(() => {
+		allCards.forEach((card, i) => {
+			card.style.transform = `translateY(0) rotate(0deg) scale(1)`;
+			card.style.opacity = '1';
+			card.style.zIndex = 2;
+		});
+	}, 500);
+}
+
+// Run animation when about section enters viewport
+function onAboutInView() {
+	const about = document.querySelector('.about');
+	if (!about) return;
+	const rect = about.getBoundingClientRect();
+	const inView = rect.top < window.innerHeight && rect.bottom > 0;
+	if (inView && !about.dataset.shuffled) {
+		shuffleCardsAnimation();
+		about.dataset.shuffled = "true";
+	}
+}
+window.addEventListener('scroll', onAboutInView);
+window.addEventListener('DOMContentLoaded', onAboutInView);
+</script>
 </body>
 </html>
