--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<h3>Welcome, I'm</h3>
 			<h1>Rahul Timbaliya</h1>
 			<h5>Passionate <span>Full-Stack Developer</span></h5>
-			<p>Currently working as Software Engineer at AnsiByteCode LLP, crafting innovative web solutions with cutting-edge technologies <img src="./image/Logo-abc.png" alt="AnsiByteCode" width="30" height="20"></p>
+			<p>Currently working as Software Engineer at AnsiByteCode LLP, crafting innovative web solutions with cutting-edge technologies</p>
 			<div class="social">
 				<a href="https://www.facebook.com/rahul.timbaliya/" target="_blank" aria-label="Facebook"><i class='bx bxl-facebook-circle'></i></a>
 				<a href="https://www.linkedin.com/in/rahul-timbaliya" target="_blank" aria-label="LinkedIn"><i class='bx bxl-linkedin-square'></i></a>
@@ -82,35 +82,25 @@
 				</div>
 			</div>
 			 	
+
 			<div class="sub-box">
 				<div class="sub-img">
-					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 223 236" width="55" class="angular-logo">
-						<g clip-path="url(#a)">
-							<path fill="url(#b)" d="m222.077 39.192-8.019 125.923L137.387 0l84.69 39.192Zm-53.105 162.825-57.933 33.056-57.934-33.056 11.783-28.556h92.301l11.783 28.556ZM111.039 62.675l30.357 73.803H80.681l30.358-73.803ZM7.937 165.115 0 39.192 84.69 0 7.937 165.115Z"></path>
-							<path fill="url(#c)" d="m222.077 39.192-8.019 125.923L137.387 0l84.69 39.192Zm-53.105 162.825-57.933 33.056-57.934-33.056 11.783-28.556h92.301l11.783 28.556ZM111.039 62.675l30.357 73.803H80.681l30.358-73.803ZM7.937 165.115 0 39.192 84.69 0 7.937 165.115Z"></path>
-						</g>
-						<defs>
-							<linearGradient id="b" x1="49.009" x2="225.829" y1="213.75" y2="129.722" gradientUnits="userSpaceOnUse">
-								<stop stop-color="#E40035"></stop>
-								<stop offset=".24" stop-color="#F60A48"></stop>
-								<stop offset=".352" stop-color="#F20755"></stop>
-								<stop offset=".494" stop-color="#DC087D"></stop>
-								<stop offset=".745" stop-color="#9717E7"></stop>
-								<stop offset="1" stop-color="#6C00F5"></stop>
-							</linearGradient>
-							<linearGradient id="c" x1="41.025" x2="156.741" y1="28.344" y2="160.344" gradientUnits="userSpaceOnUse">
-								<stop stop-color="#FF31D9"></stop>
-								<stop offset="1" stop-color="#FF5BE1" stop-opacity="0"></stop>
-							</linearGradient>
-							<clipPath id="a">
-								<path fill="#fff" d="M0 0h223v236H0z"></path>
-							</clipPath>
-						</defs>
-					</svg>
+					<img src="image/angular.png" height="200px" width="200px" alt="Angular">
 					<h3>Angular</h3>
 				</div>
 			</div>
-
+			<div class="sub-box">
+				<div class="sub-img">
+					<img src="image/powerbi.png" alt="Python">
+					<h3>Power BI</h3>
+				</div>
+			</div> 
+			<div class="sub-box">
+				<div class="sub-img">
+					<img src="image/powerapps.png" alt="Power Apps">
+					<h3>Power Apps</h3>
+				</div>
+			</div> 
 			<div class="sub-box">
 				<div class="sub-img">
 					<img src="image/Python.png" alt="Python">
