Education section are changed

--- a/index.html
+++ b/index.html
@@ -240,39 +240,71 @@
 			</div>
 			
 			<div class="education-section">
-				<h1><i class='bx bx-book-reader'></i> Educational Background</h1>
-				
-				<div class="education-item">
-					<h3><i class='bx bxs-star'></i> Master of Computer Applications (2023-Current)</h3>
-					<p><i class='bx bxs-square-rounded'></i> Studying at Indira Gandhi National Open University</p>
-					<p><i class='bx bxs-square-rounded'></i> Currently pursuing MCA degree</p>
-					<div class="result">In Progress</div>
-				</div>
+                <h1><i class='bx bx-book-reader'></i> Educational Background</h1>
+                
+                <div class="education-item">
+                    <h3><i class='bx bxs-star'></i> Master of Computer Applications (2023-Current)</h3>
+                    <div class="exp-details">
+                        <div class="exp-info">
+                            <i class='bx bxs-map'></i>
+                            <span>Indira Gandhi National Open University</span>
+                        </div>
+                        <div class="exp-info">
+                            <i class='bx bxs-calendar'></i>
+                            <span>2023 - Current</span>
+                        </div>
+                    </div>
+                    <div class="result">In Progress</div>
+                </div>
 
-				<div class="education-item">
-					<h3><i class='bx bxs-star'></i> Bachelor of Computer Applications (2020-2023)</h3>
-					<p><i class='bx bxs-square-rounded'></i> Studied at Dr. Subhash Technical Campus, Junagadh</p>
-					<p><i class='bx bxs-square-rounded'></i> Overall CGPA: 8.0</p>
-					<div class="education-results">
-						<div class="result">CGPA: 8.0</div>
-						<a href="Educational/BCA-Result Rahul-Timbaliya.zip" class="result-btn" download>View Results</a>
-					</div>
-				</div>
+                <div class="education-item">
+                    <h3><i class='bx bxs-star'></i> Bachelor of Computer Applications (2020-2023)</h3>
+                    <div class="exp-details">
+                        <div class="exp-info">
+                            <i class='bx bxs-map'></i>
+                            <span>Dr. Subhash Technical Campus, Junagadh</span>
+                        </div>
+                        <div class="exp-info">
+                            <i class='bx bxs-calendar'></i>
+                            <span>2020 - 2023</span>
+                        </div>
+                    </div>
+                    <div class="education-results">
+                        <div class="result">CGPA: 8.0</div>
+                        <a href="Educational/BCA-Result Rahul-Timbaliya.zip" class="result-btn" download>View Results</a>
+                    </div>
+                </div>
 
-				<div class="education-item">
-					<h3><i class='bx bxs-star'></i> Higher Secondary Education (2019-2020)</h3>
-					<p><i class='bx bxs-square-rounded'></i> Studied at G.N. Damani High School</p>
-					<p><i class='bx bxs-square-rounded'></i> Overall Percentage: 90%</p>
-					<div class="result">Percentage: 90%</div>
-				</div>
+                <div class="education-item">
+                    <h3><i class='bx bxs-star'></i> Higher Secondary Education (2019-2020)</h3>
+                    <div class="exp-details">
+                        <div class="exp-info">
+                            <i class='bx bxs-map'></i>
+                            <span>G.N. Damani High School</span>
+                        </div>
+                        <div class="exp-info">
+                            <i class='bx bxs-calendar'></i>
+                            <span>2019 - 2020</span>
+                        </div>
+                    </div>
+                    <div class="result">Percentage: 90%</div>
+                </div>
 
-				<div class="education-item">
-					<h3><i class='bx bxs-star'></i> Secondary School Certificate (2017-2018)</h3>
-					<p><i class='bx bxs-square-rounded'></i> Studied at G.N. Damani High School</p>
-					<p><i class='bx bxs-square-rounded'></i> Overall Percentage: 59%</p>
-					<div class="result">Percentage: 59%</div>
-				</div>
-			</div>
+                <div class="education-item">
+                    <h3><i class='bx bxs-star'></i> Secondary School Certificate (2017-2018)</h3>
+                    <div class="exp-details">
+                        <div class="exp-info">
+                            <i class='bx bxs-map'></i>
+                            <span>G.N. Damani High School</span>
+                        </div>
+                        <div class="exp-info">
+                            <i class='bx bxs-calendar'></i>
+                            <span>2017 - 2018</span>
+                        </div>
+                    </div>
+                    <div class="result">Percentage: 59%</div>
+                </div>
+            </div>
 
 
 		</div>
