added the feed form

--- a/index.html
+++ b/index.html
@@ -644,9 +644,36 @@
 		</div>
 	</section>
 
+	<!-- Feedback Section -->
+	<section class="feedback" id="feedback">
+		<div class="heading">
+			<h3>Feedback</h3>
+			<p>Share Your Thoughts<br>Your Opinion Matters</p>
+		</div>
+
+		<div class="feedback-container">
+			<form class="feedback-form" id="feedbackForm">
+				<div class="form-group">
+					<label for="feedbackEmail">Email Address</label>
+					<input type="email" id="feedbackEmail" name="email" placeholder="Enter your email address">
+				</div>
+
+				<div class="form-group">
+					<label for="feedbackMessage">Your Feedback</label>
+					<textarea id="feedbackMessage" name="feedback" placeholder="Share your thoughts, suggestions, or feedback about my portfolio..." rows="6"></textarea>
+				</div>
+
+				<div class="form-buttons">
+					<button type="button" class="btn clear-btn" onclick="clearFeedbackForm()">Clear</button>
+					<button type="submit" class="btn submit-btn">Submit Feedback</button>
+				</div>
+			</form>
+		</div>
+	</section>
+
 	<!-- Footer -->
 	<div class="ends">
-		<p>Designed and Developed by Rahul Timbaliya © 2023</p>
+		<p>Designed and Developed by Rahul Timbaliya 2023</p>
 	</div>
 
 	<!-- Back to Top -->
