--- a/admin/index.html
+++ b/admin/index.html
@@ -50,6 +50,10 @@
                     <i class="fas fa-external-link-alt"></i>
                     <span>View Site</span>
                 </div>
+                <div class="menu-item logout-item" onclick="logout()">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <span>Logout</span>
+                </div>
             </div>
         </div>
 
@@ -157,5 +161,6 @@
     <!-- Toast Notification Container -->
     <div id="adminToastContainer"></div>
 </body>
+<script src="js/auth.js"></script>
 <script src="js/script.js"></script>
 </html>
